--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,7 @@
 
 img {
     border-radius: 10px;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.5);
 }
 
 .menu1 ul {
@@ -44,20 +45,6 @@ img {
     font-size: 18px;
 }
   
-footer a {
-    color: #212121;
-}
-
-
-.columns {
-    display: flex;
-}
-  
-.footer-column {
-    flex: 50%;
-    margin: 20px;
-}
-
 a {
     color: white;
     text-decoration: none;
@@ -67,18 +54,6 @@ a {
 body {
 	margin: 0;
     background-color: white;
-}
-
-.center a::before {
-    content: '';
-    bottom: 0;
-    left: 0;
-    position: absolute;
-    width: 100%;
-    height: 2px;
-    background-color: #64b5f6;
-    transition: 0.2s;
-    transform: scaleX(0);
 }
 
 .center a:hover:before {
@@ -115,6 +90,8 @@ body {
     background: #1e88e5;
 }
 
+
+
 #switchMode:before {
     content: '';
     position: absolute;
@@ -150,4 +127,15 @@ body {
     position: absolute;
     right: 20px;
     top: 15px;
+}
+
+.form-group input {
+    width: 300px;
+    height: 50px;
+}
+
+.form-group textarea {
+    width: 300px;
+    height: 200px;
+    margin-top: 50px;
 }
